--- a/public/css/style.css
+++ b/public/css/style.css
@@ -700,7 +700,8 @@ main {
   padding: 0;
   margin: 0;
   font-weight: 600;
-  list-style: none; }
+  list-style: none;
+  white-space: nowrap; }
 
 .event__rollup-btn {
   position: relative;
