--- a/public/css/style.css
+++ b/public/css/style.css
@@ -700,8 +700,7 @@ main {
   padding: 0;
   margin: 0;
   font-weight: 600;
-  list-style: none;
-  white-space: nowrap; }
+  list-style: none; }
 
 .event__rollup-btn {
   position: relative;
