--- a/markup/css/style.css
+++ b/markup/css/style.css
@@ -31,6 +31,7 @@ main {
   display: flex;
   -ms-flex-direction: column;
       flex-direction: column;
+  overflow-y: scroll;
   height: 100%;
   min-width: 1200px;
   padding: 0;
