--- a/public/css/style.css
+++ b/public/css/style.css
@@ -997,3 +997,28 @@ main {
   /*border: 3px solid palevioletred;*/
   box-shadow: 0 0 0 3px #eb0b02;
 }
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-5px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(5px);
+  }
+}
+.state-shake {
+  animation: shake 0.6s;
+}
