Point pictures: add custom scrollbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -924,6 +924,15 @@ main {
   -ms-flex-align: start;
       align-items: flex-start; }
 
+.event__photos-container::-webkit-scrollbar {
+  height: 5px;
+}
+
+.event__photos-container::-webkit-scrollbar-thumb {
+  background: #666;
+  border-radius: 2px;
+}
+
 .event__photo {
   display: block;
   height: 152px;
