--- a/public/css/style.css
+++ b/public/css/style.css
@@ -164,7 +164,8 @@ main {
   margin-bottom: 35px; }
 
 .trip-main__trip-controls {
-  width: 600px; }
+  width: 600px;
+  align-self: center; }
 
 .trip-main__event-add-btn {
   min-width: 170px; }
